--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -48,10 +48,14 @@
     display: flex;
     flex-direction: column;
     text-align: center;
-    flex-grow: 1;  /*pegar o tamanho restante e expandir*/
+    flex-grow: 2;  /*pegar o tamanho restante e expandir*/
 }
 .videoSobre-sobre-list{
     flex-grow: 1;
+}
+.videoSobre-video{
+    flex-grow: 1;
+    flex-shrink: 2;
 }
 /*Parte Mobile*/
 @media(max-width: 768px){
@@ -88,5 +92,11 @@
 }
 .cabecalhoPrincipal-nav-link-app{
     order: -1; /*Ordenar item*/
+}
+.videoSobre .container{
+    flex-direction: column;
+}
+.videoSobre-video{
+    margin: 0% auto;
 }
 }
